fix:fix table row alignments

--- a/src/App.scss
+++ b/src/App.scss
@@ -51,7 +51,7 @@
       font-weight: lighter;
       text-align: left;
       padding: 10px 0;
-      width:25%;
+      width: 25%;
       width: 12rem;
 
       &:first-child {
@@ -81,7 +81,7 @@
       display: block;
       width: 100%;
       overflow: auto;
-      height: 24rem;
+      height: 22rem;
       tr {
         background-color: #133252;
 
@@ -98,10 +98,10 @@
         }
 
         td {
-          font-size: 13px;
+          font-size: 11px;
           color: #fff;
           padding-bottom: 20px;
-          width: 12rem;
+          width: 8rem;
 
           &:first-child {
             padding-left: 30px;
